# Sollux

./: .gitignore  LICENSE  README.md  Sollux.cabal  stack.yaml
src/: CLI.hs  Config.hs  Main.hs  Nginx.hs  Utils.hs
src/Nginx/: Compiler.hs  Parser.hs  Preprocessor.hs
