name:                Sollux
version:             0.1.0
synopsis:            Domain and SSL manager for HMI
license:             AllRightsReserved
author:              Alessandro Gatti
maintainer:          zikyky@gmail.com
copyright:           2016 HMI
category:            System Tools
build-type:          Simple
cabal-version:       >=1.10

executable Sollux
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
