name:                Sollux
version:             0.1.0
synopsis:            Domain and SSL manager for HMI
license:             OtherLicense
license-file:        LICENSE
author:              Alessandro Gatti
maintainer:          zikyky@gmail.com
homepage:            https://github.com/Hamcha/Sollux
category:            System Tools
build-type:          Simple
cabal-version:       >=1.10

executable Sollux
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  Safe
  build-depends:
    base         >= 4.7     && < 5,
    filepath     >= 1.4     && < 2,
    directory    >= 1.2.5.1 && < 2,
    mtl          >= 2.2     && < 3
  ghc-options:         -Wall
  other-modules:
    CLI,
    Config,
    Nginx,
    Nginx.Parser,
    Nginx.Compiler,
    Nginx.Preprocessor,
    Utils
